--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,19 @@
 body {
   margin: 0;
-  background-color: #d5d2dd;
 }
-#full {
+.full {
   height: 100vh;
   width: 100vw;
-  background: url(backgrounds/isabella-fischer-ynfmVbvunQU-unsplash.jpg);
+}
+#on {
+  background: url(backgrounds/on.jpg);
   background-position: center;
   background-size: auto 100%;
   background-repeat: no-repeat;
 }
-#light-switch {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-}
-.dark {
-  background: black;
+#off {
+  background: url(backgrounds/off.jpg);
+  background-position: center;
+  background-size: auto 100%;
+  background-repeat: no-repeat;
 }
